bugfix(grafana):修改tls設定錯誤的部分

--- a/k8s/tool/grafana/grafana-ingress.yaml
+++ b/k8s/tool/grafana/grafana-ingress.yaml
@@ -16,5 +16,5 @@ spec:
               number: 443
   tls:
   - hosts:
-    - sbdemo.example.com
-    secretName: tls-sbdemo
+    - grafana.example.com
+    secretName: tls-grafana
