bugfix(grafana):修改yaml裡面的name

--- a/k8s/tool/grafana/grafana-ingress.yaml
+++ b/k8s/tool/grafana/grafana-ingress.yaml
@@ -11,7 +11,7 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: grafana
+            name: grafana-np
             port: 
               number: 443
   tls:
