--- a/k8s/tool/grafana/grafana-nodeport.yaml
+++ b/k8s/tool/grafana/grafana-nodeport.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app: grafana
   name: grafana-np
 spec:
   type: NodePort
   ports:
-  - port: 443
-    name: https
-    targetPort: 3000
+   - name: "http-port"
+     protocol: "TCP"
+     port: 80
+     targetPort: 3000
   selector:
     app: grafana
+
