chore(deploy):增加hostAliases使Jmeter agent可以存取sbdemo.example.com

--- a/k8s/jmeter/jmeter-slave.yaml
+++ b/k8s/jmeter/jmeter-slave.yaml
@@ -71,6 +71,10 @@ spec:
             mbean  = "java.lang:type=Threading"
             attribute = "TotalStartedThreadCount,ThreadCount,DaemonThreadCount,PeakThreadCount"
     spec:
+      hostAliases:
+      - ip: 192.168.140.2
+        hostnames:
+        - sbdemo.example.com
       containers:
       - name: jmslave
         image: rbillon59/jmeter-k8s-base:5.4.1
