--- a/k8s/jmeter/jmeter-master.yaml
+++ b/k8s/jmeter/jmeter-master.yaml
@@ -69,6 +69,10 @@ spec:
             mbean  = "java.lang:type=Threading"
             attribute = "TotalStartedThreadCount,ThreadCount,DaemonThreadCount,PeakThreadCount"
     spec:
+      hostAliases:
+      - ip: 192.168.140.2
+        hostnames:
+        - sbdemo.example.com
       securityContext:
         runAsUser: 1000
         fsGroup: 1000
