chore(設定): 修改jmeter imagePullPolicy與demoweb threads數量 修改jmeter imagePullPolicy為IfNotPresent、demoweb threads=5

--- a/k8s/jmeter/jmeter-master.yaml
+++ b/k8s/jmeter/jmeter-master.yaml
@@ -79,7 +79,7 @@ spec:
       containers:
       - name: jmmaster
         image: rbillon59/jmeter-k8s-base:5.4.1
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         volumeMounts:
             - mountPath: /report
               name: jmeter-data-dir
