--- a/k8s/jmeter/jmeter-slave.yaml
+++ b/k8s/jmeter/jmeter-slave.yaml
@@ -78,7 +78,7 @@ spec:
       containers:
       - name: jmslave
         image: rbillon59/jmeter-k8s-base:5.4.1
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         env:
         - name: MODE
           value: "SLAVE"
